--- a/index.html
+++ b/index.html
@@ -1,20 +1,38 @@
 <div id="app">
-  <span class="negrita">Nombre: </span> Mónica Pan Gómez
-  <br />
+  <span class="negrita">Nombre:</span> Mónica Pan Gómez
+  <br>
+
   <span class="negrita">URL:</span>
-  <a href="https://js-pvdpvz.stackblitz.io" target="_blank">
-    https://js-pvdpvz.stackblitz.io
-  </a>
-  <br/>
+  <a href="https://js-pvdpvz.stackblitz.io" target="_blank">https://js-pvdpvz.stackblitz.io</a>
+  <br>
+
   <span class="negrita">GitHub:</span>
-  <a href="https://github.com/mpangomez/08MBID---Visualizacion-de-Datos" target="_blank">
-    https://github.com/mpangomez/08MBID---Visualizacion-de-Datos
-  </a>
+  <a href="https://github.com/mpangomez/08MBID---Visualizacion-de-Datos" target="_blank">https://github.com/mpangomez/08MBID---Visualizacion-de-Datos</a>
+
   <h1>Visualización de datos - AG1</h1>
+
   <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTSdoAtRdaZxN1dNCSp3t2QKsLEPz53eGcgppFTXMKNLZ506jZTOjpFI329LnbuWpi6YkhvRlSyZelx/pubchart?oid=903775261&amp;format=interactive"></iframe>
-  <br/>
+
+  <br>
+
   <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTSdoAtRdaZxN1dNCSp3t2QKsLEPz53eGcgppFTXMKNLZ506jZTOjpFI329LnbuWpi6YkhvRlSyZelx/pubchart?oid=2039795653&amp;format=interactive"></iframe>
-  <br/>
-  <iframe title="Emisiones CO2" aria-label="Scatter Plot" id="datawrapper-chart-mfxJ8" src="https://datawrapper.dwcdn.net/mfxJ8/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
-  </script>
+
+  <br>
+
+  <iframe width="607" height="375" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTSdoAtRdaZxN1dNCSp3t2QKsLEPz53eGcgppFTXMKNLZ506jZTOjpFI329LnbuWpi6YkhvRlSyZelx/pubchart?oid=812137329&amp;format=interactive"></iframe>
+
+  <br>
+
+  <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTSdoAtRdaZxN1dNCSp3t2QKsLEPz53eGcgppFTXMKNLZ506jZTOjpFI329LnbuWpi6YkhvRlSyZelx/pubchart?oid=1969094696&amp;format=interactive"></iframe>
+
+  <br>
+
+  <iframe title="Emisiones CO2" aria-label="Scatter Plot" id="datawrapper-chart-mfxJ8" src="https://datawrapper.dwcdn.net/mfxJ8/2/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400" data-external="1"></iframe>
+
+  <br><br>
+
+  <iframe title="Top 10 emisiones CO2 en 2021" aria-label="Bar Chart" id="datawrapper-chart-CYBRH" src="https://datawrapper.dwcdn.net/CYBRH/1/" scrolling="no" frameborder="0" style="border: none;" width="590" height="373" data-external="1"></iframe>
+
+  <br><br>
+
 </div>
